--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,20 +1,21 @@
 form {
-	display: flex;
-	flex-direction: column;
-	padding: 1rem;
-	margin: auto;
-	max-width: 680px;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  margin: 200px auto 0;
+  max-width: 680px;
 }
 
 form label {
-	margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
-form input, form textarea {
-	margin-bottom: 1rem;
-	padding: 10px 18px;
-	font-size: 1.2rem;
-	background: rgba(255,255,255,.1);
-	border-color: rgba(255,255,255,.1);
-	color: #f4f4f4;
+form input,
+form textarea {
+  margin-bottom: 1rem;
+  padding: 10px 18px;
+  font-size: 1.2rem;
+  background: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.1);
+  color: #f4f4f4;
 }
